@@ -73,6 +73,6 @@ confint(fit, "wt")
 counts <- c(18,17,15,20,10,20,25,13,12)
 outcome <- gl(3, 1, 9); treatment <- gl(3, 3)
 glm.D93 <- glm(counts ~ outcome + treatment, family = poisson())
-confint(glm.D93) # needs MASS to be installed
+confint(glm.D93) 
 confint.default(glm.D93)  # based on asymptotic normality}
 \keyword{models}
